--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,9 +5,16 @@
     <title>Title</title>
 </head>
 <body>
-<form enctype="multipart/form-data" method="post" action="/uploadFile">
-    图片<input type="file" name="file"/>
-    <input type="submit" value="上传"/>
+<form enctype="multipart/form-data" method="post" action="/releaseArticle">
+    <!--    图片<input type="file" name="file"/>-->
+
+    <div><input type="text" name="title"/></div>
+    <div><input type="text" name="placeName"/></div>
+    <div><input type="text" name="province"/></div>
+    <div><input type="text" name="content"/></div>
+    <div><input type="text" name="pictureID"/></div>
+    <div><input type="submit" value="上传"/></div>
+
 </form>
 </body>
 </html>
